BUGFIX Fixed test case.